[package]
name = "nlaproxy-cached"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Credential cache daemon for nlaproxy. Receives passwords from a PAM module on SSH login, exposes them to the FreeRDP NLA proxy plugin, and maintains the NTLM SAM file used for NLA validation."

[[bin]]
name = "nlaproxy-cached"
path = "src/main.rs"

[dependencies]
# minimal stdlib-only daemon - keep dependencies tiny for security review
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
nix = { version = "0.29", default-features = false, features = ["fs", "user", "socket", "hostname"] }
md4 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["std"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "getrandom"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }
tracing-journald = { version = "0.3", default-features = false }
anyhow = "1"
